--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -62,3 +62,11 @@
     }
     
 }
+
+.skills-container{
+    display:  grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 4rem;
+    row-gap: 3rem;
+    margin: 4rem 0
+}
