--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 @import './styles/about';
 @import './styles/skill';
 @import './styles/services';
+@import './styles/contact';
 
 
 *{
@@ -13,6 +14,16 @@
     box-sizing: border-box;
 }
 
+body::-webkit-scrollbar{
+    width: 6px;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: #9684a1;
+    border-radius: 50px;
+}
+body::-webkit-scrollbar-track{
+    background-color: #AAACB0;
+}
 body {
     color: #a4acc4;
     font-family: 'Roboto', sans-serif;
