--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,11 +1,13 @@
 .ContactItem{
     width: 100%;
-    margin: 1rem 0;
+    &:not(:last-child){
+        margin-bottom: 1rem;
+    }
     .contact{
         display: flex;
         align-items: center;
-        height: 10rem;
         background-color: #9684a1;
+        padding: 1rem 0;
         .right-items{
             margin-left: 2rem;
         }
@@ -15,13 +17,41 @@
             border: 1px solid #a4acc4;
             margin-left: 2rem;
         }
+        .right-items{
+            h6{
+                font-size: 1.4rem;
+                font-weight: 500;
+            }
+        }
     }
 }
 
 .ContactPage{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    margin-bottom: 6rem;
     .contact-sect{
         width: 100%;
-
     }
+}
+
+.map-sect{
+    width: 97%;
+    padding: .5rem;
+    background-color: #9684a1;
+    iframe{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.contact-sect{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.title{
+    margin-bottom: 5rem;
 }
