--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -2,15 +2,15 @@
     .sidebar {
         width: 16%;
         height: 100vh;
-        background-color: #9684a1;
+        background-color: #F4F4F9;
         position: fixed;
-        border-right: 1px solid #9684a1;
+        border-right: 1px solid #0C090D;;
 
     }
     .main-content {
         width: 84%;
         margin-left: 16%;
-        background-color: #262730;
+        background-color: #F4F4F9;
         min-height: 100vh;
         //background-image: url(../img/black.texture.jpg);
         display: grid ;
