--- a/src/App.scss
+++ b/src/App.scss
@@ -25,11 +25,14 @@ body::-webkit-scrollbar-track{
     background-color: #AAACB0;
 }
 body {
-    color: #a4acc4;
-    font-family: 'Roboto', sans-serif;
+    color: #0C090D;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 300;
     font-size: 1.2rem;
 }
 
 span{
-    color: #a4acc4;
+    color: #C36C32;
+    font-family: 'Playfair Display', serif;
+    text-transform: uppercase;
 }
