--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -3,6 +3,7 @@
     margin-top: 4rem;
     margin-bottom: 4rem;
     
+    
     .img{
         width: 100%;
         height: 50vh;
@@ -16,7 +17,7 @@
     .about-info{
         margin-left: 2rem;
         h4{
-            font-size: 2rem;
+            font-size: 1rem;
         }
         .about-text{
             padding: 1rem 0;
@@ -26,6 +27,7 @@
 
 .about-details{
     display: flex;
+    color: #0C090D;
     p{
         padding: .3rem 0;
     }
@@ -36,12 +38,12 @@
 
 .btn{
     padding: 1rem 2rem;
-    background-color: #BFEDC1;
+    background-color: #C36C32;
     outline: none;
     border: none;
     font-family: inherit;
     font-size: inherit;
-    color: #262730;
+    color: #0C090D;
     text-transform: uppercase;
     cursor: pointer;
     letter-spacing: 2px;
@@ -54,7 +56,7 @@
         height: .3rem;
         left: 0;
         bottom: 0;
-        background-color: #9684a1;
+        background-color: #C36C32;
         transition: all 0.4s ease-in-out;
     }
     &:hover::after{
