--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -8,28 +8,24 @@
 
         .profile {
             width: 100%;
-            text-align: center;
+            text-align: left;
             margin-top: 1rem;
-            border-bottom: 1px solid #262730;
-            img{
-                width: 70%;
-                //border-radius: 100%;
-                //border: 2px solid #262730;
-                margin-bottom: 1rem;
-            }
+            margin-bottom: 27rem;
+            color: #0C090D;
         }
 
         .nav-items {
             width: 100%;
             .nav-item{
                 list-style: none;
-                text-align: center; 
+                text-align: left;
                 a{
                     text-decoration: none;
                     font-size: inherit;
-                    color: inherit;
+                    color: #0C090D;
                     display: block ;
                     padding: .5rem 0;
+                    margin-left: 5px;
                     position: relative;
                     &::before{
                         content:"";
@@ -38,16 +34,16 @@
                         left: 0;
                         width: .4 rem;
                         height: 100%;
-                        background-color: #2627303a;
-                        transform-origin: bottom;
-                        transform: scale(0);
-                        transition: transform .6s, .2s width .5s cubic-bezier(1,-0.16,.6,1.35);
+                        background-color: #c36c32;
+                        transform-origin: center left;
+                        transform: scale(1.5);
+                        transition: transform .6s, .2s width .5s cubic-bezier(0,1.12,1,.04);
                         overflow-x: hidden;
                     }
 
                     &:hover::before{
                         width: 100%;
-                        transform: scale(1); 
+                        transform: scale(.17); 
                     }
                 }
             }
@@ -59,6 +55,7 @@
             p{
                 text-align: center;
                 padding: 1rem 0;
+                color: #0C090D;
             }
         }
     }
@@ -66,5 +63,5 @@
 }
 
 .active {
-    background-color: #262730 ;
+    background-color: #F4F4F9;
 }
