--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -10,7 +10,7 @@
             width: 100%;
             text-align: left;
             margin-top: 1rem;
-            margin-bottom: 27rem;
+            margin-bottom: 55vh;
             color: #0C090D;
         }
 
