--- a/src/styles/_skill.scss
+++ b/src/styles/_skill.scss
@@ -25,7 +25,7 @@
                 position: relative;
                 .inner-progress{
                     position: absolute;
-                    background-color: #9684a1;
+                    background-color: #7f636e;
                     height: 100%;
                     bottom: 0;
                     left: 0;
