--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -21,6 +21,7 @@
         }
         .about-text{
             padding: 1rem 0;
+            font-size: 1rem;
         }
     }
 }
@@ -30,6 +31,7 @@
     color: #0C090D;
     p{
         padding: .3rem 0;
+        font-size: 1rem;
     }
     .right-section{
         margin-left: 2.3rem;
