--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -6,7 +6,11 @@
     .contact{
         display: flex;
         align-items: center;
-        background-color: #9684a1;
+        background-color: #f4f4f9;
+        border-left: 1px solid #0c090d;
+        border-right: 1px solid #0c090d;
+        border-bottom: 1px solid #0c090d;
+        border-top: 1px solid #0c090d;
         padding: 1rem 0;
         .right-items{
             margin-left: 2rem;
@@ -14,7 +18,7 @@
         img {
             width: 75px;
             padding: 1rem;
-            border: 1px solid #a4acc4;
+            border: 1px solid #55868c;
             margin-left: 2rem;
         }
         .right-items{
@@ -29,7 +33,6 @@
 .ContactPage{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-
     margin-bottom: 6rem;
     .contact-sect{
         width: 100%;
@@ -39,7 +42,11 @@
 .map-sect{
     width: 97%;
     padding: .5rem;
-    background-color: #9684a1;
+    background-color: #f4f4f9;
+    border-left: 1px solid #0c090d;
+    border-right: 1px solid #0c090d;
+    border-bottom: 1px solid #0c090d;
+    border-top: 1px solid #0c090d;
     iframe{
         width: 100%;
         height: 100%;
