--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ body::-webkit-scrollbar{
     width: 6px;
 }
 body::-webkit-scrollbar-thumb{
-    background-color: #9684a1;
+    background-color: #C36C32;
     border-radius: 50px;
 }
 body::-webkit-scrollbar-track{
@@ -29,7 +29,7 @@ body {
     color: #0C090D;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 300;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 span{
