--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -18,6 +18,7 @@
         margin-left: 2rem;
         h4{
             font-size: 1rem;
+            font-weight: 400;
         }
         .about-text{
             padding: 1rem 0;
