--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -6,11 +6,63 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    row-gap: 1.5rem;
+    column-gap: .5rem;
     .portfolio{
         .image-data{
+            position: relative;
+            &::before{
+                content: "";
+                position: absolute;
+                top: 90%;
+                left: 15px;
+                height: 4px;
+                width: calc(100% - 30px);
+                background-color: #C36C32;
+                transform-origin: left;
+                transform: scale(0);
+                transition: all .4s ease-in-out;
+                opacity: 0.9;
+            }
+            &:hover::before{
+                transform: scale(1);
+            
+            }
             img{
                 width: 100%;
-                height: 100%;
+                height: 30vh;
+                object-fit: cover;
+            }
+            .hover-items{
+                list-style: none;
+                position: absolute;
+                top: 70%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background-color: #55868C;
+                padding: 1rem 2rem;
+                visibility: hidden;
+            }
+
+            &:hover{
+                .hover-items{
+                    transition: all .5s ease-in-out;
+                    visibility: visible;
+                    top: 50%;
+
+                }
+            }
+        }
+        
+        h5{
+            font-size: 1.2rem;
+            font-weight: 500;
+            color: #C36C32;
+            text-transform: uppercase;
+            transition: all .3s ease-in-out;
+            &:hover{
+                color: #55868C;
+                cursor: pointer;
             }
         }
     }
