--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -39,14 +39,26 @@
                 top: 70%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                background-color: #55868C;
+                background-color: #C36C32;
                 padding: 1rem 2rem;
                 visibility: hidden;
+                li{
+                    position: relative;
+                    a{
+                        position: absolute;
+                        padding: 1rem;
+                        text-decoration: none;
+                        font-family: inherit;
+                        border-radius: 100%;
+                        background-color: #F4F4F9;
+                        top: 0;
+                    }
+                }
             }
 
             &:hover{
                 .hover-items{
-                    transition: all .5s ease-in-out;
+                    transition: all .5s ease-in-out .3s;
                     visibility: visible;
                     top: 50%;
 
