--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -4,7 +4,7 @@
         height: 100vh;
         background-color: #F4F4F9;
         position: fixed;
-        border-right: 1px solid #0C090D;;
+        border-right: 2px solid #0C090D;;
 
     }
     .main-content {
@@ -16,7 +16,15 @@
         display: grid ;
         position: relative ;
         .content{
-            margin: 5rem 5rem;
+            margin: 5rem 2rem;
+            
         }
     }
+}
+
+.banner{
+    padding-bottom: 30vh;
+    border-bottom: 2px solid #F4F4F9;
+    margin-bottom: 20px;
+    
 }
