--- a/src/styles/_skill.scss
+++ b/src/styles/_skill.scss
@@ -1,8 +1,12 @@
 .SkillsSection{
+   
 }
 
 .skills-container{
-    margin: 1rem 0;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    
+
 
     .skill-title{
         font-size: 1rem;
