--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -4,11 +4,46 @@
     left: 50%;
     transform: translate(-50%, -50% );
     width: 80%;
+    
+}
+
+.banner-text{
+    color: #F4F4F9;
+    text-align: left;
+    border-bottom: 2px solid #F4F4F9; 
+    border-top: 2px solid #F4F4F9; 
+    margin-top: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-left: 5px;
+    span{
+        color: #F4F4F9;
+        font-size: 10rem;
+        font-weight: 300;
+    }
+}
+
+.banner-two-text{
+    color: #F4F4F9;
+    text-align: left;
+    font-size: 2rem;
+    margin-left: 5px;
+}
+
+.b-sub-text{
+    padding-top: 5px;
+    padding-bottom: 20px;
+    text-align: left;
+    font-size: 1rem;
+    color: #F4F4F9;
+    margin-left: 5px;
 }
 
 .hero-text{
     color: #0C090D;
-    text-align: left; 
+    text-align: left;
+    border-bottom: 2px solid black; 
+    border-top: 2px solid black; 
     span{
         color: #0C090D;
         font-size: 10rem;
@@ -24,10 +59,12 @@
 }
 
 .h-sub-text{
+    padding-top: 5px;
     text-align: left;
     font-size: 1rem;
     color: #0C090D;
 }
+
 
 .icons{
     align-items: center;
