--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -12,6 +12,9 @@
             transform: translateX(-100%);
             width: 20%;
         }
+        @media screen and (max-width: 411px) {
+            width: 50%;
+        }
     }
     .nav-toggle{
         @media screen and (max-width: 1000px) {
@@ -30,6 +33,9 @@
         position: relative ;
         .content{
             margin: 5rem 2rem;
+            @media screen and (max-width: 1100px) {
+                margin: 2rem 10rem;
+            }
         }
         @media screen and (max-width: 1000px) {
             margin-left: 0;
