--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -9,6 +9,11 @@
         border-bottom: 2px solid #0c090d;
         border-top: 2px solid #0c090d;
         transition: .4s ease-in-out;
+        @media screen and (max-width: 1400px) {
+            width: 100%;
+            margin-bottom: 1rem;
+            
+        }
         &:hover {
             border-top: 1px solid #c36c32;
             border-left: 1px solid #c36c32;
@@ -49,4 +54,6 @@
     display: flex;
     justify-content: space-between;
     margin-top: 4rem;
+    
 }
+
