--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -34,12 +34,15 @@
         .content{
             margin: 5rem 2rem;
             @media screen and (max-width: 1100px) {
-                margin: 2rem 10rem;
+                margin: 2rem 2rem;
             }
         }
         @media screen and (max-width: 1000px) {
             margin-left: 0;
             width: 100%;
+        }
+        @media screen and (max-width: 710px) {
+            margin: 2rem auto;
         }
     }
 }
@@ -68,7 +71,7 @@
     .lines-1, .lines-2, .lines-3{
         height: .3rem;
         width: 100%;
-        background-color: #F4F4F9;
+        background-color: #C36C32;
         pointer-events: none;
         display: none;
         border-radius: 20px;
