--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -19,6 +19,10 @@
             object-fit: cover;
             height: 100%;
         }
+        @media screen and (max-width: 1400px){
+            height: 50%;
+            width: 50%;
+        }
     }
     
     .about-info{
