--- a/src/styles/_skill.scss
+++ b/src/styles/_skill.scss
@@ -1,41 +1,19 @@
 .SkillsSection{
-   
+   margin-bottom: 2rem;
+   border: 2px #000 solid;
 }
 
 .skills-container{
-    margin-top: 1rem;
-    margin-bottom: 2rem;
+    margin-top: 2.5rem;
+    
     
 
 
     .skill-title{
         font-size: 1rem;
         font-weight: 400;
-    }
-
-    .skill-bar{
-        display: flex;
-        align-items: center;
-        .skill-text{
-        font-size: 1rem;
-        }
-        .skill-progress{
-            width: 100%;
-            .progress{
-                width: 100%;
-                height: .5rem;
-                margin-left: 1rem;
-                background-color: #9684a1ab;
-                position: relative;
-                .inner-progress{
-                    position: absolute;
-                    background-color: #7f636e;
-                    height: 100%;
-                    bottom: 0;
-                    left: 0;
-                }
-            }
-        }
-
+        margin-left: 6.08vw;
+        margin-bottom: 2vw;
+        
     }
 }
