updates to portfolio page animations

--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -51,15 +51,13 @@
             &::before{
                 content: "";
                 position: absolute;
-                top: 90%;
-                left: 15px;
-                height: 4px;
-                width: calc(100% - 30px);
+                height: 100%;
+                width: 100%;
                 background-color: #C36C32;
-                transform-origin: left;
+                transform-origin: center;
                 transform: scale(0);
                 transition: all .4s ease-in-out;
-                opacity: 0.9;
+                opacity: 0.2;
             }
             &:hover::before{
                 transform: scale(1);
@@ -76,10 +74,10 @@
                 top: 70%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                border: solid #7f636e9d;
                 padding: 1rem 2rem;
                 visibility: hidden;
-                border-radius: 50%;
+                border-radius: 100%;
+                
                 li{
                     position: relative;
                     a{
@@ -87,9 +85,11 @@
                         padding: 1rem;
                         text-decoration: none;
                         color: #F4F4F9;
+                        text-transform: capitalize;
                         font-family: inherit;
+                        font-weight: 600;
                         border-radius: 100%;
-                        background-color: #7F636E;
+                        background-color: #C36C32;
                         top: 0;
                     }
                 }
@@ -99,7 +99,7 @@
                 .hover-items{
                     transition: all .5s ease-in-out .3s;
                     visibility: visible;
-                    top: 50%;
+                    top: 80%;
 
                 }
             }
