--- a/src/styles/portfolios.scss
+++ b/src/styles/portfolios.scss
@@ -93,6 +93,10 @@
                         top: 0;
                     }
                 }
+
+                .gitIcon{
+                    color: red;
+                }
             }
 
             &:hover{
